--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,5 @@ michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
